# mc-mailer

./: .gitignore  Cargo.toml
src/: email.rs  endpoints.rs  main.rs  verification.rs  whitelist.rs
