[package]
name = "mc-mailer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
async-process = "1.7.0"
async-std = "1.12.0"
base64 = "0.21.0"
chrono = "0.4.24"
lettre = "0.10.4"
lettre_email = "0.9.4"
openssl = "0.10.52"
rand = "0.8.5"
serde = { version = "1.0.162", features = ["derive"] }
serde_qs = "0.12.0"
